examples/test/testpolicy14975.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14975
  namespace: namespace166
spec:
  podSelector:
    matchLabels:
      key48: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value43
          key48: value27
      podSelector:
        matchLabels:
          key25: value6
          key35: value8
